--- a/app/src/main/res/layout/item_party.xml
+++ b/app/src/main/res/layout/item_party.xml
@@ -8,6 +8,7 @@
     android:orientation="vertical"
     android:paddingLeft="16dp"
     android:paddingRight="16dp"
+    android:background="?android:selectableItemBackground"
     tools:context="org.collapsed.ssuparty_android.ui.main.MainActivity">
 
     <RelativeLayout
@@ -52,6 +53,7 @@
                 android:id="@+id/party_item_tag_layout"
                 android:layout_width="wrap_content"
                 android:layout_height="26dp"
+                android:clickable="false"
                 app:atg_textSize="12sp"
                 app:atg_borderColor="#d7d0f9"
                 app:atg_backgroundColor="#d7d0f9"
