--- a/app/src/main/res/layout/user_profile_detail_activity.xml
+++ b/app/src/main/res/layout/user_profile_detail_activity.xml
@@ -25,6 +25,15 @@
                 android:layout_height="56dp"
                 android:background="#a15ffb">
 
+                <ImageButton
+                    android:id="@+id/userdetailprofile_cancel_btn"
+                    android:layout_width="50dp"
+                    android:layout_height="40dp"
+                    android:layout_alignParentLeft="true"
+                    android:layout_marginTop="8dp"
+                    android:background="@android:color/transparent"
+                    android:src="@drawable/arrow" />
+
                 <TextView
                     android:id="@+id/userdetailprofile_title"
                     android:layout_width="wrap_content"
